// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rewards Widget when there are no rewards displays no rewards dialog 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
   
   
  
  
  <div
    aria-hidden="true"
  >
    <button
      aria-label="open rewards dialog"
      class="MuiButtonBase-root-35 MuiButton-root-6 MuiButton-outlined-11 makeStyles-rewardsButton-2 makeStyles-rewards-1 makeStyles-button-4"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label-7"
      >
        <img
          alt="rewards icon"
          class="makeStyles-rewardsIcon-3"
          src="/assets/icons/rewards-spark.svg"
        />
        <div
          class="MuiBox-root-40 MuiBox-root-41"
        >
          <p
            class="MuiTypography-root-42 MuiTypography-body2-43"
          >
            $0
          </p>
        </div>
      </span>
      <span
        class="MuiTouchRipple-root-91"
      />
    </button>
  </div>
  <div
    class="MuiDialog-root-74"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root-103"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiDialog-container-77 MuiDialog-scrollPaper-75"
      role="none presentation"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        aria-describedby="Claim your rewards"
        aria-labelledby="claim-modal"
        class="MuiPaper-root-105 MuiDialog-paper-78 MuiDialog-paperScrollPaper-79 MuiDialog-paperWidthSm-83 makeStyles-smallDialog-73 MuiDialog-paperFullWidth-87 MuiPaper-elevation24-132 MuiPaper-rounded-106"
        role="dialog"
      >
        <div
          class="MuiDialogTitle-root-156 makeStyles-title-133"
        >
          <h6
            class="MuiTypography-root-42 makeStyles-titleText-134 MuiTypography-h6-52"
          >
            My Rewards
          </h6>
          <button
            class="MuiButtonBase-root-35 MuiIconButton-root-157 makeStyles-closeButton-140"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-165"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-166"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-91"
            />
          </button>
        </div>
        <div
          class="MuiDialogContent-root-175 makeStyles-content-135"
        >
          <div
            class="MuiGrid-root-177 makeStyles-contentGrid-152 MuiGrid-container-178 MuiGrid-spacing-xs-8-207"
          >
            <div
              class="MuiGrid-root-177 MuiGrid-item-179 MuiGrid-grid-xs-12-223 MuiGrid-grid-sm-4-229"
            >
              <div
                class="MuiGrid-root-177 MuiGrid-container-178 MuiGrid-direction-xs-column-181"
              >
                <div
                  class="makeStyles-noRewardsAmount-151"
                >
                  <img
                    alt="rewards icon"
                    class="makeStyles-rewardsIcon-150"
                    src="/assets/icons/rewards-gift.svg"
                  />
                  <div
                    class="MuiBox-root-40 MuiBox-root-282"
                  >
                    <h6
                      class="MuiTypography-root-42 makeStyles-titleText-134 MuiTypography-h6-52"
                    >
                      $0.00
                    </h6>
                  </div>
                </div>
                <p
                  class="MuiTypography-root-42 MuiTypography-body2-43 MuiTypography-colorTextSecondary-68"
                >
                  No rewards available.
                </p>
              </div>
            </div>
            <div
              class="MuiGrid-root-177 MuiGrid-item-179 MuiGrid-grid-xs-12-223 MuiGrid-grid-sm-8-233"
            >
              <div
                class="MuiGrid-root-177 makeStyles-moreRewardsSection-142"
              >
                <div
                  class="MuiGrid-root-177 makeStyles-moreRewardsInformation-143 MuiGrid-container-178 MuiGrid-direction-xs-column-181"
                >
                  <div
                    class="MuiGrid-root-177 MuiGrid-item-179"
                  >
                    <h6
                      class="MuiTypography-root-42 makeStyles-titleText-134 MuiTypography-h6-52"
                    >
                      Want more rewards ?
                    </h6>
                  </div>
                  <div
                    class="MuiGrid-root-177 makeStyles-moreRewardsDescription-144 MuiGrid-item-179"
                  >
                    <p
                      class="MuiTypography-root-42 MuiTypography-body2-43"
                    >
                      Boost your rewards and support the BadgerDAO ecosystem, by holding and staking Badger tokens.
                    </p>
                  </div>
                  <div
                    class="MuiGrid-root-177 makeStyles-rewardsGuideLinkContainer-146 MuiGrid-item-179"
                  >
                    <a
                      class="MuiTypography-root-42 MuiLink-root-283 MuiLink-underlineHover-285 makeStyles-rewardsGuide-147 MuiTypography-colorPrimary-65"
                    >
                      Rewards User Guide
                    </a>
                  </div>
                  <div
                    class="MuiGrid-root-177 makeStyles-boostRewards-145 MuiGrid-item-179"
                  >
                    <button
                      class="MuiButtonBase-root-35 MuiButton-root-6 MuiButton-contained-14 MuiButton-containedPrimary-15 MuiButton-fullWidth-29"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiButton-label-7"
                      >
                        Boost My Rewards
                      </span>
                      <span
                        class="MuiTouchRipple-root-91"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`Rewards Widget when there are no rewards displays zero amount in rewards button 1`] = `
<div>
  <button
    aria-label="open rewards dialog"
    class="MuiButtonBase-root-35 MuiButton-root-6 MuiButton-outlined-11 makeStyles-rewardsButton-2 makeStyles-rewards-1 makeStyles-button-4"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label-7"
    >
      <img
        alt="rewards icon"
        class="makeStyles-rewardsIcon-3"
        src="/assets/icons/rewards-spark.svg"
      />
      <div
        class="MuiBox-root-40 MuiBox-root-41"
      >
        <p
          class="MuiTypography-root-42 MuiTypography-body2-43"
        >
          $0
        </p>
      </div>
    </span>
    <span
      class="MuiTouchRipple-root-91"
    />
  </button>
</div>
`;

exports[`Rewards Widget when there are rewards can display user guide 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
   
   
  
  
  <div
    aria-hidden="true"
  >
    <button
      aria-label="open rewards dialog"
      class="MuiButtonBase-root-35 MuiButton-root-6 MuiButton-outlined-11 makeStyles-rewardsButton-2 makeStyles-rewards-1 makeStyles-button-4"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label-7"
      >
        <img
          alt="rewards icon"
          class="makeStyles-rewardsIcon-3"
          src="/assets/icons/rewards-spark.svg"
        />
        <div
          class="MuiBox-root-40 MuiBox-root-41"
        >
          <p
            class="MuiTypography-root-42 MuiTypography-body2-43"
          >
            $12.92
          </p>
        </div>
      </span>
      <span
        class="MuiTouchRipple-root-91"
      />
    </button>
  </div>
  <div
    class="MuiDialog-root-74"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root-103"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiDialog-container-77 MuiDialog-scrollPaper-75"
      role="none presentation"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        aria-describedby="Rewards User Guide"
        aria-labelledby="user-guide"
        class="MuiPaper-root-105 MuiDialog-paper-78 MuiDialog-paperScrollPaper-79 MuiDialog-paperWidthSm-83 makeStyles-smallDialog-73 MuiDialog-paperFullWidth-87 MuiPaper-elevation24-132 MuiPaper-rounded-106"
        role="dialog"
      >
        <div
          class="MuiDialogTitle-root-156 makeStyles-title-326"
        >
          <div
            class="MuiBox-root-40 MuiBox-root-336"
          >
            <button
              aria-label="exit guide mode"
              class="MuiButtonBase-root-35 MuiIconButton-root-157 makeStyles-arrowBack-328"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label-165"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-166 MuiSvgIcon-fontSizeInherit-172"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M17.51 3.87L15.73 2.1 5.84 12l9.9 9.9 1.77-1.77L9.38 12l8.13-8.13z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root-91"
              />
            </button>
            <h6
              class="MuiTypography-root-42 makeStyles-boldWeight-332 MuiTypography-h6-52"
            >
              Rewards User Guide
            </h6>
          </div>
        </div>
        <div
          class="MuiDialogContent-root-175 makeStyles-content-327"
        >
          <div
            class="MuiGrid-root-177 MuiGrid-container-178"
          >
            <div
              class="MuiGrid-root-177 MuiGrid-item-179"
            >
              <ul
                class="makeStyles-rewardsOptions-331"
              >
                <li>
                  <p
                    class="MuiTypography-root-42 MuiTypography-body2-43"
                  >
                    Staking 50% non native tokens
                  </p>
                </li>
                <li>
                  <p
                    class="MuiTypography-root-42 MuiTypography-body2-43"
                  >
                    Holding and/or Staking 50% BadgerDAO tokens
                  </p>
                </li>
              </ul>
            </div>
            <div
              class="MuiGrid-root-177 makeStyles-tokensSection-334 MuiGrid-container-178 MuiGrid-item-179 MuiGrid-direction-xs-column-181 MuiGrid-grid-xs-12-223"
            >
              <div
                class="MuiGrid-root-177 MuiGrid-item-179"
              >
                <h6
                  class="MuiTypography-root-42 MuiTypography-subtitle2-54"
                >
                  Badger has 3 types of tokens:
                </h6>
              </div>
              <div
                class="MuiGrid-root-177 makeStyles-userGuideTokens-329 MuiGrid-container-178 MuiGrid-spacing-xs-4-203"
              >
                <div
                  class="MuiGrid-root-177 MuiGrid-item-179"
                >
                  <div
                    class="MuiGrid-root-177 makeStyles-userGuideToken-330 MuiGrid-container-178 MuiGrid-direction-xs-column-181"
                  >
                    <div
                      class="MuiGrid-root-177 MuiGrid-item-179"
                    >
                      <p
                        class="MuiTypography-root-42 makeStyles-tokenName-333 MuiTypography-body2-43 MuiTypography-colorTextSecondary-68"
                      >
                        BADGERDAO TOKENS:
                      </p>
                    </div>
                    <div
                      class="MuiGrid-root-177 MuiGrid-item-179"
                    >
                      <h6
                        class="MuiTypography-root-42 MuiTypography-subtitle2-54"
                      >
                        Badger, Digg
                      </h6>
                    </div>
                    <div
                      class="MuiGrid-root-177 MuiGrid-container-178 MuiGrid-item-179 MuiGrid-direction-xs-column-reverse-182 MuiGrid-grid-xs-true-211"
                    >
                      <button
                        aria-label="view badger dao tokens"
                        class="MuiButtonBase-root-35 MuiButton-root-6 MuiButton-text-8 makeStyles-viewVaultsButton-335 MuiButton-textPrimary-9 MuiButton-textSizeSmall-21 MuiButton-sizeSmall-27"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="MuiButton-label-7"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root-166 MuiSvgIcon-colorPrimary-167"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M16.01 11H4v2h12.01v3L20 12l-3.99-4z"
                            />
                          </svg>
                          <h6
                            class="MuiTypography-root-42 MuiTypography-subtitle2-54"
                          >
                            View Vaults
                          </h6>
                        </span>
                        <span
                          class="MuiTouchRipple-root-91"
                        />
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiGrid-root-177 MuiGrid-item-179"
                >
                  <div
                    class="MuiGrid-root-177 makeStyles-userGuideToken-330 MuiGrid-container-178 MuiGrid-item-179 MuiGrid-direction-xs-column-181"
                  >
                    <div
                      class="MuiGrid-root-177 MuiGrid-item-179"
                    >
                      <p
                        class="MuiTypography-root-42 makeStyles-tokenName-333 MuiTypography-body2-43 MuiTypography-colorTextSecondary-68"
                      >
                        BOOSTED TOKENS:
                      </p>
                    </div>
                    <div
                      class="MuiGrid-root-177 MuiGrid-item-179"
                    >
                      <h6
                        class="MuiTypography-root-42 MuiTypography-subtitle2-54"
                      >
                        ibBTC, crvsBTC LP, imBTC, Mhbtc, Cvxcrv, Tricrypto
                      </h6>
                    </div>
                    <div
                      class="MuiGrid-root-177 MuiGrid-container-178 MuiGrid-item-179 MuiGrid-direction-xs-column-reverse-182 MuiGrid-grid-xs-true-211"
                    >
                      <button
                        aria-label="view boosted tokens"
                        class="MuiButtonBase-root-35 MuiButton-root-6 MuiButton-text-8 makeStyles-viewVaultsButton-335 MuiButton-textPrimary-9 MuiButton-textSizeSmall-21 MuiButton-sizeSmall-27"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="MuiButton-label-7"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root-166 MuiSvgIcon-colorPrimary-167"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M16.01 11H4v2h12.01v3L20 12l-3.99-4z"
                            />
                          </svg>
                          <h6
                            class="MuiTypography-root-42 MuiTypography-subtitle2-54"
                          >
                            View Vaults
                          </h6>
                        </span>
                        <span
                          class="MuiTouchRipple-root-91"
                        />
                      </button>
                    </div>
                  </div>
                </div>
                <div
                  class="MuiGrid-root-177 MuiGrid-item-179"
                >
                  <div
                    class="MuiGrid-root-177 makeStyles-userGuideToken-330 MuiGrid-container-178 MuiGrid-item-179 MuiGrid-direction-xs-column-181"
                  >
                    <div
                      class="MuiGrid-root-177 MuiGrid-item-179"
                    >
                      <p
                        class="MuiTypography-root-42 makeStyles-tokenName-333 MuiTypography-body2-43 MuiTypography-colorTextSecondary-68"
                      >
                        NON-BOOSTED TOKENS:
                      </p>
                    </div>
                    <div
                      class="MuiGrid-root-177 MuiGrid-item-179"
                    >
                      <h6
                        class="MuiTypography-root-42 MuiTypography-subtitle2-54"
                      >
                        All other tokens (e.g. wBTC, renBTC...)
                      </h6>
                    </div>
                    <div
                      class="MuiGrid-root-177 MuiGrid-container-178 MuiGrid-item-179 MuiGrid-direction-xs-column-reverse-182 MuiGrid-grid-xs-true-211"
                    >
                      <button
                        aria-label="view non-boosted tokens"
                        class="MuiButtonBase-root-35 MuiButton-root-6 MuiButton-text-8 makeStyles-viewVaultsButton-335 MuiButton-textPrimary-9 MuiButton-textSizeSmall-21 MuiButton-sizeSmall-27"
                        tabindex="0"
                        type="button"
                      >
                        <span
                          class="MuiButton-label-7"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root-166 MuiSvgIcon-colorPrimary-167"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M16.01 11H4v2h12.01v3L20 12l-3.99-4z"
                            />
                          </svg>
                          <h6
                            class="MuiTypography-root-42 MuiTypography-subtitle2-54"
                          >
                            View Vaults
                          </h6>
                        </span>
                        <span
                          class="MuiTouchRipple-root-91"
                        />
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`Rewards Widget when there are rewards can go back from user guide 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
   
   
  
  
  <div
    aria-hidden="true"
  >
    <button
      aria-label="open rewards dialog"
      class="MuiButtonBase-root-35 MuiButton-root-6 MuiButton-outlined-11 makeStyles-rewardsButton-2 makeStyles-rewards-1 makeStyles-button-4"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label-7"
      >
        <img
          alt="rewards icon"
          class="makeStyles-rewardsIcon-3"
          src="/assets/icons/rewards-spark.svg"
        />
        <div
          class="MuiBox-root-40 MuiBox-root-41"
        >
          <p
            class="MuiTypography-root-42 MuiTypography-body2-43"
          >
            $12.92
          </p>
        </div>
      </span>
      <span
        class="MuiTouchRipple-root-91"
      />
    </button>
  </div>
  <div
    class="MuiDialog-root-74"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root-103"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiDialog-container-77 MuiDialog-scrollPaper-75"
      role="none presentation"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        aria-describedby="Claim your rewards"
        aria-labelledby="claim-modal"
        class="MuiPaper-root-105 MuiDialog-paper-78 MuiDialog-paperScrollPaper-79 MuiDialog-paperWidthSm-83 makeStyles-bigDialog-72 MuiDialog-paperFullWidth-87 MuiPaper-elevation24-132 MuiPaper-rounded-106"
        role="dialog"
      >
        <div
          class="MuiDialogTitle-root-156 makeStyles-title-337"
        >
          <h6
            class="MuiTypography-root-42 makeStyles-titleText-338 MuiTypography-h6-52"
          >
            My Rewards
          </h6>
          <button
            class="MuiButtonBase-root-35 MuiIconButton-root-157 makeStyles-closeButton-344"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-165"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-166"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-91"
            />
          </button>
        </div>
        <div
          class="MuiDialogContent-root-175 makeStyles-content-339"
        >
          <div
            class="MuiGrid-root-177 makeStyles-contentGrid-356 MuiGrid-container-178 MuiGrid-spacing-xs-8-207"
          >
            <div
              class="MuiGrid-root-177 makeStyles-checkboxesSpacing-357 MuiGrid-item-179 MuiGrid-grid-xs-12-223 MuiGrid-grid-sm-6-231"
            >
              <div
                class="MuiGrid-root-177 makeStyles-contentPadding-358 MuiGrid-container-178 MuiGrid-direction-xs-column-181"
              >
                <div
                  class="MuiGrid-root-177 makeStyles-optionsContainer-359 MuiGrid-container-178 MuiGrid-item-179"
                >
                  <div
                    class="MuiGrid-root-177 makeStyles-claimRow-345 MuiGrid-item-179"
                  >
                    <div
                      class="MuiGrid-root-177 MuiGrid-container-178 MuiGrid-justify-content-xs-space-between-197"
                    >
                      <label
                        class="MuiFormControlLabel-root-362"
                      >
                        <span
                          aria-disabled="false"
                          class="MuiButtonBase-root-35 MuiIconButton-root-157 PrivateSwitchBase-root-374 MuiCheckbox-root-368 MuiCheckbox-colorPrimary-372 PrivateSwitchBase-checked-375 MuiCheckbox-checked-369 MuiIconButton-colorPrimary-161"
                        >
                          <span
                            class="MuiIconButton-label-165"
                          >
                            <input
                              checked=""
                              class="PrivateSwitchBase-input-377"
                              data-indeterminate="false"
                              type="checkbox"
                              value=""
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root-166"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root-91"
                          />
                        </span>
                        <span
                          class="MuiTypography-root-42 MuiFormControlLabel-label-367 MuiTypography-body1-44"
                        >
                          <p
                            class="MuiTypography-root-42 MuiTypography-body2-43"
                          >
                            BADGER
                          </p>
                        </span>
                      </label>
                      <div
                        class="MuiBox-root-40 MuiBox-root-378"
                      >
                        <h6
                          class="MuiTypography-root-42 makeStyles-boldWeight-361 MuiTypography-h6-52"
                        >
                          0.02802
                        </h6>
                        <div
                          class="makeStyles-currencyContainer-360"
                        >
                          <div
                            class="MuiBox-root-40 MuiBox-root-381"
                          >
                            <p
                              class="MuiTypography-root-42 MuiTypography-body2-43 MuiTypography-colorTextSecondary-68"
                            >
                              $3.40513
                            </p>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root-177 makeStyles-claimRow-345 MuiGrid-item-179"
                  >
                    <div
                      class="MuiGrid-root-177 MuiGrid-container-178 MuiGrid-justify-content-xs-space-between-197"
                    >
                      <label
                        class="MuiFormControlLabel-root-362"
                      >
                        <span
                          aria-disabled="false"
                          class="MuiButtonBase-root-35 MuiIconButton-root-157 PrivateSwitchBase-root-374 MuiCheckbox-root-368 MuiCheckbox-colorPrimary-372 PrivateSwitchBase-checked-375 MuiCheckbox-checked-369 MuiIconButton-colorPrimary-161"
                        >
                          <span
                            class="MuiIconButton-label-165"
                          >
                            <input
                              checked=""
                              class="PrivateSwitchBase-input-377"
                              data-indeterminate="false"
                              type="checkbox"
                              value=""
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root-166"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root-91"
                          />
                        </span>
                        <span
                          class="MuiTypography-root-42 MuiFormControlLabel-label-367 MuiTypography-body1-44"
                        >
                          <p
                            class="MuiTypography-root-42 MuiTypography-body2-43"
                          >
                            bveCVX
                          </p>
                        </span>
                      </label>
                      <div
                        class="MuiBox-root-40 MuiBox-root-382"
                      >
                        <h6
                          class="MuiTypography-root-42 makeStyles-boldWeight-361 MuiTypography-h6-52"
                        >
                          0.02453
                        </h6>
                        <div
                          class="makeStyles-currencyContainer-360"
                        >
                          <div
                            class="MuiBox-root-40 MuiBox-root-385"
                          >
                            <p
                              class="MuiTypography-root-42 MuiTypography-body2-43 MuiTypography-colorTextSecondary-68"
                            >
                              $2.60968
                            </p>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root-177 makeStyles-claimRow-345 MuiGrid-item-179"
                  >
                    <div
                      class="MuiGrid-root-177 MuiGrid-container-178 MuiGrid-justify-content-xs-space-between-197"
                    >
                      <label
                        class="MuiFormControlLabel-root-362"
                      >
                        <span
                          aria-disabled="false"
                          class="MuiButtonBase-root-35 MuiIconButton-root-157 PrivateSwitchBase-root-374 MuiCheckbox-root-368 MuiCheckbox-colorPrimary-372 PrivateSwitchBase-checked-375 MuiCheckbox-checked-369 MuiIconButton-colorPrimary-161"
                        >
                          <span
                            class="MuiIconButton-label-165"
                          >
                            <input
                              checked=""
                              class="PrivateSwitchBase-input-377"
                              data-indeterminate="false"
                              type="checkbox"
                              value=""
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root-166"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root-91"
                          />
                        </span>
                        <span
                          class="MuiTypography-root-42 MuiFormControlLabel-label-367 MuiTypography-body1-44"
                        >
                          <p
                            class="MuiTypography-root-42 MuiTypography-body2-43"
                          >
                            bCVXCRV
                          </p>
                        </span>
                      </label>
                      <div
                        class="MuiBox-root-40 MuiBox-root-386"
                      >
                        <h6
                          class="MuiTypography-root-42 makeStyles-boldWeight-361 MuiTypography-h6-52"
                        >
                          0.03989
                        </h6>
                        <div
                          class="makeStyles-currencyContainer-360"
                        >
                          <div
                            class="MuiBox-root-40 MuiBox-root-389"
                          >
                            <p
                              class="MuiTypography-root-42 MuiTypography-body2-43 MuiTypography-colorTextSecondary-68"
                            >
                              $6.90143
                            </p>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <hr
                  class="MuiDivider-root-390 makeStyles-divider-353"
                />
                <div
                  class="MuiGrid-root-177 MuiGrid-container-178 MuiGrid-item-179 MuiGrid-align-items-xs-center-186 MuiGrid-justify-content-xs-space-between-197"
                >
                  <p
                    class="MuiTypography-root-42 MuiTypography-body2-43"
                  >
                    Total Claimable Rewards
                  </p>
                  <div
                    class="MuiBox-root-40 MuiBox-root-399"
                  >
                    <h6
                      class="MuiTypography-root-42 makeStyles-titleText-338 MuiTypography-h6-52"
                    >
                      $12.92
                    </h6>
                  </div>
                </div>
                <div
                  class="MuiGrid-root-177 makeStyles-submitButton-352 MuiGrid-item-179"
                >
                  <button
                    class="MuiButtonBase-root-35 MuiButton-root-6 MuiButton-contained-14 MuiButton-containedPrimary-15 MuiButton-fullWidth-29"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label-7"
                    >
                      Claim My Rewards
                    </span>
                    <span
                      class="MuiTouchRipple-root-91"
                    />
                  </button>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root-177 MuiGrid-item-179 MuiGrid-grid-xs-12-223 MuiGrid-grid-sm-6-231"
            >
              <div
                class="MuiGrid-root-177 makeStyles-moreRewardsSection-346"
              >
                <div
                  class="MuiGrid-root-177 makeStyles-moreRewardsInformation-347 MuiGrid-container-178 MuiGrid-direction-xs-column-181"
                >
                  <div
                    class="MuiGrid-root-177 MuiGrid-item-179"
                  >
                    <h6
                      class="MuiTypography-root-42 makeStyles-titleText-338 MuiTypography-h6-52"
                    >
                      Want more rewards ?
                    </h6>
                  </div>
                  <div
                    class="MuiGrid-root-177 makeStyles-moreRewardsDescription-348 MuiGrid-item-179"
                  >
                    <p
                      class="MuiTypography-root-42 MuiTypography-body2-43"
                    >
                      Boost your rewards and support the BadgerDAO ecosystem, by holding and staking Badger tokens.
                    </p>
                  </div>
                  <div
                    class="MuiGrid-root-177 makeStyles-rewardsGuideLinkContainer-350 MuiGrid-item-179"
                  >
                    <a
                      class="MuiTypography-root-42 MuiLink-root-400 MuiLink-underlineHover-402 makeStyles-rewardsGuide-351 MuiTypography-colorPrimary-65"
                    >
                      Rewards User Guide
                    </a>
                  </div>
                  <div
                    class="MuiGrid-root-177 makeStyles-boostRewards-349 MuiGrid-item-179"
                  >
                    <button
                      class="MuiButtonBase-root-35 MuiButton-root-6 MuiButton-contained-14 MuiButton-containedPrimary-15 MuiButton-fullWidth-29"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiButton-label-7"
                      >
                        Boost My Rewards
                      </span>
                      <span
                        class="MuiTouchRipple-root-91"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`Rewards Widget when there are rewards displays claim options 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
   
   
  
  
  <div
    aria-hidden="true"
  >
    <button
      aria-label="open rewards dialog"
      class="MuiButtonBase-root-35 MuiButton-root-6 MuiButton-outlined-11 makeStyles-rewardsButton-2 makeStyles-rewards-1 makeStyles-button-4"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label-7"
      >
        <img
          alt="rewards icon"
          class="makeStyles-rewardsIcon-3"
          src="/assets/icons/rewards-spark.svg"
        />
        <div
          class="MuiBox-root-40 MuiBox-root-41"
        >
          <p
            class="MuiTypography-root-42 MuiTypography-body2-43"
          >
            $12.92
          </p>
        </div>
      </span>
      <span
        class="MuiTouchRipple-root-91"
      />
    </button>
  </div>
  <div
    class="MuiDialog-root-74"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root-103"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiDialog-container-77 MuiDialog-scrollPaper-75"
      role="none presentation"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        aria-describedby="Claim your rewards"
        aria-labelledby="claim-modal"
        class="MuiPaper-root-105 MuiDialog-paper-78 MuiDialog-paperScrollPaper-79 MuiDialog-paperWidthSm-83 makeStyles-bigDialog-72 MuiDialog-paperFullWidth-87 MuiPaper-elevation24-132 MuiPaper-rounded-106"
        role="dialog"
      >
        <div
          class="MuiDialogTitle-root-156 makeStyles-title-133"
        >
          <h6
            class="MuiTypography-root-42 makeStyles-titleText-134 MuiTypography-h6-52"
          >
            My Rewards
          </h6>
          <button
            class="MuiButtonBase-root-35 MuiIconButton-root-157 makeStyles-closeButton-140"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-165"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-166"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-91"
            />
          </button>
        </div>
        <div
          class="MuiDialogContent-root-175 makeStyles-content-135"
        >
          <div
            class="MuiGrid-root-177 makeStyles-contentGrid-152 MuiGrid-container-178 MuiGrid-spacing-xs-8-207"
          >
            <div
              class="MuiGrid-root-177 makeStyles-checkboxesSpacing-153 MuiGrid-item-179 MuiGrid-grid-xs-12-223 MuiGrid-grid-sm-6-231"
            >
              <div
                class="MuiGrid-root-177 makeStyles-contentPadding-154 MuiGrid-container-178 MuiGrid-direction-xs-column-181"
              >
                <div
                  class="MuiGrid-root-177 makeStyles-optionsContainer-155 MuiGrid-container-178 MuiGrid-item-179"
                >
                  <div
                    class="MuiGrid-root-177 makeStyles-claimRow-141 MuiGrid-item-179"
                  >
                    <div
                      class="MuiGrid-root-177 MuiGrid-container-178 MuiGrid-justify-content-xs-space-between-197"
                    >
                      <label
                        class="MuiFormControlLabel-root-282"
                      >
                        <span
                          aria-disabled="false"
                          class="MuiButtonBase-root-35 MuiIconButton-root-157 PrivateSwitchBase-root-294 MuiCheckbox-root-288 MuiCheckbox-colorPrimary-292 PrivateSwitchBase-checked-295 MuiCheckbox-checked-289 MuiIconButton-colorPrimary-161"
                        >
                          <span
                            class="MuiIconButton-label-165"
                          >
                            <input
                              checked=""
                              class="PrivateSwitchBase-input-297"
                              data-indeterminate="false"
                              type="checkbox"
                              value=""
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root-166"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root-91"
                          />
                        </span>
                        <span
                          class="MuiTypography-root-42 MuiFormControlLabel-label-287 MuiTypography-body1-44"
                        >
                          <p
                            class="MuiTypography-root-42 MuiTypography-body2-43"
                          >
                            BADGER
                          </p>
                        </span>
                      </label>
                      <div
                        class="MuiBox-root-40 MuiBox-root-298"
                      >
                        <h6
                          class="MuiTypography-root-42 makeStyles-boldWeight-281 MuiTypography-h6-52"
                        >
                          0.02802
                        </h6>
                        <div
                          class="makeStyles-currencyContainer-280"
                        >
                          <div
                            class="MuiBox-root-40 MuiBox-root-301"
                          >
                            <p
                              class="MuiTypography-root-42 MuiTypography-body2-43 MuiTypography-colorTextSecondary-68"
                            >
                              $3.40513
                            </p>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root-177 makeStyles-claimRow-141 MuiGrid-item-179"
                  >
                    <div
                      class="MuiGrid-root-177 MuiGrid-container-178 MuiGrid-justify-content-xs-space-between-197"
                    >
                      <label
                        class="MuiFormControlLabel-root-282"
                      >
                        <span
                          aria-disabled="false"
                          class="MuiButtonBase-root-35 MuiIconButton-root-157 PrivateSwitchBase-root-294 MuiCheckbox-root-288 MuiCheckbox-colorPrimary-292 PrivateSwitchBase-checked-295 MuiCheckbox-checked-289 MuiIconButton-colorPrimary-161"
                        >
                          <span
                            class="MuiIconButton-label-165"
                          >
                            <input
                              checked=""
                              class="PrivateSwitchBase-input-297"
                              data-indeterminate="false"
                              type="checkbox"
                              value=""
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root-166"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root-91"
                          />
                        </span>
                        <span
                          class="MuiTypography-root-42 MuiFormControlLabel-label-287 MuiTypography-body1-44"
                        >
                          <p
                            class="MuiTypography-root-42 MuiTypography-body2-43"
                          >
                            bveCVX
                          </p>
                        </span>
                      </label>
                      <div
                        class="MuiBox-root-40 MuiBox-root-302"
                      >
                        <h6
                          class="MuiTypography-root-42 makeStyles-boldWeight-281 MuiTypography-h6-52"
                        >
                          0.02453
                        </h6>
                        <div
                          class="makeStyles-currencyContainer-280"
                        >
                          <div
                            class="MuiBox-root-40 MuiBox-root-305"
                          >
                            <p
                              class="MuiTypography-root-42 MuiTypography-body2-43 MuiTypography-colorTextSecondary-68"
                            >
                              $2.60968
                            </p>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiGrid-root-177 makeStyles-claimRow-141 MuiGrid-item-179"
                  >
                    <div
                      class="MuiGrid-root-177 MuiGrid-container-178 MuiGrid-justify-content-xs-space-between-197"
                    >
                      <label
                        class="MuiFormControlLabel-root-282"
                      >
                        <span
                          aria-disabled="false"
                          class="MuiButtonBase-root-35 MuiIconButton-root-157 PrivateSwitchBase-root-294 MuiCheckbox-root-288 MuiCheckbox-colorPrimary-292 PrivateSwitchBase-checked-295 MuiCheckbox-checked-289 MuiIconButton-colorPrimary-161"
                        >
                          <span
                            class="MuiIconButton-label-165"
                          >
                            <input
                              checked=""
                              class="PrivateSwitchBase-input-297"
                              data-indeterminate="false"
                              type="checkbox"
                              value=""
                            />
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root-166"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M19 3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.11 0 2-.9 2-2V5c0-1.1-.89-2-2-2zm-9 14l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                              />
                            </svg>
                          </span>
                          <span
                            class="MuiTouchRipple-root-91"
                          />
                        </span>
                        <span
                          class="MuiTypography-root-42 MuiFormControlLabel-label-287 MuiTypography-body1-44"
                        >
                          <p
                            class="MuiTypography-root-42 MuiTypography-body2-43"
                          >
                            bCVXCRV
                          </p>
                        </span>
                      </label>
                      <div
                        class="MuiBox-root-40 MuiBox-root-306"
                      >
                        <h6
                          class="MuiTypography-root-42 makeStyles-boldWeight-281 MuiTypography-h6-52"
                        >
                          0.03989
                        </h6>
                        <div
                          class="makeStyles-currencyContainer-280"
                        >
                          <div
                            class="MuiBox-root-40 MuiBox-root-309"
                          >
                            <p
                              class="MuiTypography-root-42 MuiTypography-body2-43 MuiTypography-colorTextSecondary-68"
                            >
                              $6.90143
                            </p>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <hr
                  class="MuiDivider-root-310 makeStyles-divider-149"
                />
                <div
                  class="MuiGrid-root-177 MuiGrid-container-178 MuiGrid-item-179 MuiGrid-align-items-xs-center-186 MuiGrid-justify-content-xs-space-between-197"
                >
                  <p
                    class="MuiTypography-root-42 MuiTypography-body2-43"
                  >
                    Total Claimable Rewards
                  </p>
                  <div
                    class="MuiBox-root-40 MuiBox-root-319"
                  >
                    <h6
                      class="MuiTypography-root-42 makeStyles-titleText-134 MuiTypography-h6-52"
                    >
                      $12.92
                    </h6>
                  </div>
                </div>
                <div
                  class="MuiGrid-root-177 makeStyles-submitButton-148 MuiGrid-item-179"
                >
                  <button
                    class="MuiButtonBase-root-35 MuiButton-root-6 MuiButton-contained-14 MuiButton-containedPrimary-15 MuiButton-fullWidth-29"
                    tabindex="0"
                    type="button"
                  >
                    <span
                      class="MuiButton-label-7"
                    >
                      Claim My Rewards
                    </span>
                    <span
                      class="MuiTouchRipple-root-91"
                    />
                  </button>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root-177 MuiGrid-item-179 MuiGrid-grid-xs-12-223 MuiGrid-grid-sm-6-231"
            >
              <div
                class="MuiGrid-root-177 makeStyles-moreRewardsSection-142"
              >
                <div
                  class="MuiGrid-root-177 makeStyles-moreRewardsInformation-143 MuiGrid-container-178 MuiGrid-direction-xs-column-181"
                >
                  <div
                    class="MuiGrid-root-177 MuiGrid-item-179"
                  >
                    <h6
                      class="MuiTypography-root-42 makeStyles-titleText-134 MuiTypography-h6-52"
                    >
                      Want more rewards ?
                    </h6>
                  </div>
                  <div
                    class="MuiGrid-root-177 makeStyles-moreRewardsDescription-144 MuiGrid-item-179"
                  >
                    <p
                      class="MuiTypography-root-42 MuiTypography-body2-43"
                    >
                      Boost your rewards and support the BadgerDAO ecosystem, by holding and staking Badger tokens.
                    </p>
                  </div>
                  <div
                    class="MuiGrid-root-177 makeStyles-rewardsGuideLinkContainer-146 MuiGrid-item-179"
                  >
                    <a
                      class="MuiTypography-root-42 MuiLink-root-320 MuiLink-underlineHover-322 makeStyles-rewardsGuide-147 MuiTypography-colorPrimary-65"
                    >
                      Rewards User Guide
                    </a>
                  </div>
                  <div
                    class="MuiGrid-root-177 makeStyles-boostRewards-145 MuiGrid-item-179"
                  >
                    <button
                      class="MuiButtonBase-root-35 MuiButton-root-6 MuiButton-contained-14 MuiButton-containedPrimary-15 MuiButton-fullWidth-29"
                      tabindex="0"
                      type="button"
                    >
                      <span
                        class="MuiButton-label-7"
                      >
                        Boost My Rewards
                      </span>
                      <span
                        class="MuiTouchRipple-root-91"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;

exports[`Rewards Widget when there are rewards displays rewards amount in rewards button 1`] = `
<div>
  <button
    aria-label="open rewards dialog"
    class="MuiButtonBase-root-35 MuiButton-root-6 MuiButton-outlined-11 makeStyles-rewardsButton-2 makeStyles-rewards-1 makeStyles-button-4"
    tabindex="0"
    type="button"
  >
    <span
      class="MuiButton-label-7"
    >
      <img
        alt="rewards icon"
        class="makeStyles-rewardsIcon-3"
        src="/assets/icons/rewards-spark.svg"
      />
      <div
        class="MuiBox-root-40 MuiBox-root-41"
      >
        <p
          class="MuiTypography-root-42 MuiTypography-body2-43"
        >
          $12.92
        </p>
      </div>
    </span>
    <span
      class="MuiTouchRipple-root-91"
    />
  </button>
</div>
`;

exports[`Rewards Widget when there are rewards displays success dialog 1`] = `
<body
  style="padding-right: 0px; overflow: hidden;"
>
   
   
  
  
  <div
    aria-hidden="true"
  >
    <button
      aria-label="open rewards dialog"
      class="MuiButtonBase-root-35 MuiButton-root-6 MuiButton-outlined-11 makeStyles-rewardsButton-2 makeStyles-rewards-1 makeStyles-button-4"
      tabindex="0"
      type="button"
    >
      <span
        class="MuiButton-label-7"
      >
        <img
          alt="rewards icon"
          class="makeStyles-rewardsIcon-3"
          src="/assets/icons/rewards-spark.svg"
        />
        <div
          class="MuiBox-root-40 MuiBox-root-41"
        >
          <p
            class="MuiTypography-root-42 MuiTypography-body2-43"
          >
            $12.92
          </p>
        </div>
      </span>
      <span
        class="MuiTouchRipple-root-91"
      />
    </button>
  </div>
  <div
    class="MuiDialog-root-74"
    role="presentation"
    style="position: fixed; z-index: 1300; right: 0px; bottom: 0px; top: 0px; left: 0px;"
  >
    <div
      aria-hidden="true"
      class="MuiBackdrop-root-103"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    />
    <div
      data-test="sentinelStart"
      tabindex="0"
    />
    <div
      class="MuiDialog-container-77 MuiDialog-scrollPaper-75"
      role="none presentation"
      style="opacity: 1; webkit-transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms; transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
      tabindex="-1"
    >
      <div
        aria-describedby="Claimed Rewards Overview"
        aria-labelledby="claimed-rewards"
        class="MuiPaper-root-105 MuiDialog-paper-78 MuiDialog-paperScrollPaper-79 MuiDialog-paperWidthSm-83 makeStyles-smallDialog-73 MuiDialog-paperFullWidth-87 MuiPaper-elevation24-132 MuiPaper-rounded-106"
        role="dialog"
      >
        <div
          class="MuiDialogContent-root-175 makeStyles-content-327"
        >
          <div
            class="MuiGrid-root-177 makeStyles-centeredText-333 MuiGrid-container-178 MuiGrid-direction-xs-column-181"
          >
            <button
              class="MuiButtonBase-root-35 MuiIconButton-root-157 makeStyles-closeButton-335"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label-165"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root-166"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root-91"
              />
            </button>
            <div
              class="MuiGrid-root-177 makeStyles-successIconContainer-330 MuiGrid-item-179"
            >
              <img
                alt="rewards success icon"
                src="/assets/icons/rewards-claim-success.svg"
              />
            </div>
            <h4
              class="MuiTypography-root-42 makeStyles-rewardsTitle-331 MuiTypography-h4-50"
            >
              Rewards Claimed
            </h4>
            <h6
              class="MuiTypography-root-42 MuiTypography-subtitle2-54"
            >
              Rewards claimed for tokens:
            </h6>
            <h6
              class="MuiTypography-root-42 MuiTypography-subtitle2-54"
            >
              BADGER
            </h6>
            <h6
              class="MuiTypography-root-42 MuiTypography-subtitle2-54"
            >
              bveCVX
            </h6>
            <h6
              class="MuiTypography-root-42 MuiTypography-subtitle2-54"
            >
              bCVXCRV
            </h6>
            <button
              class="MuiButtonBase-root-35 MuiButton-root-6 MuiButton-contained-14 makeStyles-goBackButton-334 MuiButton-containedPrimary-15"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label-7"
              >
                Go Back To My Rewards
              </span>
              <span
                class="MuiTouchRipple-root-91"
              />
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      data-test="sentinelEnd"
      tabindex="0"
    />
  </div>
</body>
`;
